--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <img class="logo" src="R.jpg" alt="">
         <nav class="main-nav">
-            <a href="">Home</a>
-            <a href="">Store</a>
-            <a href="">About us</a>
-            <a href="">Content</a>
+            <a href="">home</a>
+            <a href="">store</a>
+            <a href="">about us</a>
+            <a href="">content</a>
             <a href="">FAQ</a>
         </nav>
     </header>
